# agency

./: .gitignore  CLAUDE.md  README.md  agency-status.json  pyproject.toml  specification.md
.claude/: settings.local.json
.github/workflows/: content-guard.yml
docs/integrations/: caller-protocol.md  superpowers.md  using agency as an MCP with claude code.md  using agency with superpowers.md  using agency with workgraph.md  workgraph.md
docs/plans/: 2026-03-05-agency-v1.md
notes/dailynotes/: 2026-03-09.md
primitives/: starter.csv  starter_17032026.csv  starter_17032026T0330.csv  starter_18032026T0300.csv  starter_18032026T1800.csv  starter_19032026.csv  starter_19032026T0445.csv  starter_19032026T1700.csv  starter_20032026T0030.csv  starter_20032026T0100.csv  starter_20032026T0200.csv  starter_20032026T0330.csv  starter_20032026T0500.csv  starter_20032026T0630.csv  starter_20032026T0700.csv  starter_21032026T1100.csv  starter_21032026T2100.csv  starter_22032026T0200.csv  starter_22032026T0220.csv  starter_22032026T0415.csv  starter_22032026T0500.csv  starter_22032026T0800.csv  starter_22032026T0930.csv  starter_22032026T1030.csv  starter_22032026T1130.csv  starter_22032026T1700.csv  starter_24032026T1200.csv  starter_25032026T0100.csv  starter_25032026T2330.csv  starter_26032026T0300.csv  starter_26032026T1709.csv  starter_28032026T1500.csv  starter_30032026T0232.csv
src/agency/: __init__.py  client.py  constants.py
tests/: conftest.py  test_infrastructure_refs.py  test_mcp_e2e.py
tests/contract/: test_homepool_interface.py
tests/integration/: test_api_routes.py  test_evaluation_roundtrip.py  test_evaluator_callback.py  test_full_init.py  test_init_wizard.py  test_primitives_cli.py  test_projects_routes.py  test_serve_startup.py  test_tasks_routes.py  test_upgrade.py  test_wave0_roundtrip.py
tests/unit/: test_agent_creator.py  test_app_startup.py  test_assigner.py  test_assigner_embedding_path.py  test_assigner_llm_path.py  test_autostart.py  test_batch_assigner.py  test_batch_models.py  test_classifier.py  test_composition_cache.py  test_config.py  test_constants.py  test_default_output_format.py  test_email.py  test_embedding.py  test_error_handling.py  test_evaluation_submission.py  test_evaluations_queue.py  test_evaluator.py  test_evolver.py  test_get_task.py  test_hashing.py  test_hierarchy.py  test_idempotency.py  test_ids.py  test_init_cli.py  test_jwt.py  test_jwt_middleware.py  test_keypair.py  test_mcp.py  test_migrations.py  test_permissions.py  test_primitive_store.py  test_project_cli.py  test_projects_store.py  test_renderer.py  test_setup_cli.py  (+9 more)
(+60 files in other folders)
